--- a/bista_purchase/views/stock_picking_views.xml
+++ b/bista_purchase/views/stock_picking_views.xml
@@ -21,6 +21,7 @@
                             <field name="future_ship_nuances"/>
                             <field name="minimums_nuances"/>
                             <field name="shipping_nuances"/>
+                            <field name="backorder_url" invisible="1"/>
                         </group>
                         <group>
                             <field name="rush_processing_nuances"/>
