[ADD]Shipment tracking label changes and Logic of remaining quantity

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -133,7 +133,7 @@
                         </group>
                     </group>
                 </page>
-                <page name="shipment_tracking" string="Shipment Tracking">
+                <page name="shipment_tracking" string="Shipment Tracking" attrs="{'invisible':[('state','not in',['purchase','done'])]}">
                     <button name="open_tracking" type="object" string="Create Tracking" class="btn btn-primary" context="{'new':1}"/>
                     <field name="purchase_tracking_ids"/>
                 </page>
