--- a/bista_purchase/views/purchase_tracking_views.xml
+++ b/bista_purchase/views/purchase_tracking_views.xml
@@ -53,7 +53,7 @@
                                     <field name="product_id" readonly="1" force_save="1" invisible="1"/>
                                     <field name="ordered_qty" force_save="1"/>
                                     <field name="received_qty" force_save="1" optional="hide"/>
-                                    <field name="remaining_qty" force_save="1"/>
+                                    <field name="pending_shipment_qty" force_save="1"/>
                                     <field name="ship_qty" string="Shipped Quantity"/>
                                 </tree>
                             </field>
