--- a/bista_sale/views/stock_picking_view.xml
+++ b/bista_sale/views/stock_picking_view.xml
@@ -8,7 +8,9 @@
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
                 <field name="sequence_code" invisible="1"/>
-
+            </field>
+            <field name="shipping_partner_id" position="attributes">
+                <attribute name="attrs">{'invisible': [('sequence_code', '!=', 'DS')]}</attribute>
             </field>
             <!-- <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']"
                    position="after">
