[IMP] Feature #18174 send dropship email to customer and Feature #17819 did changes

--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -223,13 +223,14 @@
         </field>
     </record>
     <record id="po_status_line_action" model="ir.actions.act_window">
-        <field name="name">Po Status Line</field>
+        <field name="name">Product Line Status</field>
         <field name="res_model">po.status.line</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-
-    <menuitem id="po_status_line_menu" name="Status" action="po_status_line_action"
-              parent="purchase.menu_unit_of_measure_in_config_purchase" sequence="11"/>
-
+    <menuitem
+        id="po_status_line_menu"
+        action="po_status_line_action"
+        parent="purchase.menu_product_in_config_purchase"
+        sequence="4" />
 </odoo>
