--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -135,7 +135,18 @@
                 </page>
                 <page name="shipment_tracking" string="Shipment Tracking" attrs="{'invisible':[('state','not in',['purchase','done'])]}">
                     <button name="open_tracking" type="object" string="Create Tracking" class="btn btn-primary" context="{'new':1}"/>
-                    <field name="purchase_tracking_ids"/>
+                    <field name="purchase_tracking_ids" readonly="0">
+                        <tree string="Purchase Tracking Tree" create="0" write="0" editable="bottom">
+                            <field name="name" readonly="1"/>
+                            <field name="shipment_date" required="1" optional="show" readonly="1"/>
+                            <field name="carrier_id" optional="show" readonly="1"/>
+                            <field name="pro_number" optional="show" readonly="1"/>
+                            <field name="status" optional="show" readonly="1"/>
+                            <field name="dest_address_id" invisible="1" />
+                            <button name="edit_tracking_line" icon="fa-edit" type="object" class="btn-link" style="float:right"/>
+                            <button name="send_email" string="Send Email" type="object" class="btn-primary" attrs="{'invisible': ['|', ('dest_address_id', '=', False), ('status', 'in', ['received', 'on_hold'])]}" />
+                        </tree>
+                    </field>
                 </page>
             </xpath>
         </field>
