[IMP]Update All lines field nomenclatures

--- a/bista_purchase/wizard/update_shipment_tracking_views.xml
+++ b/bista_purchase/wizard/update_shipment_tracking_views.xml
@@ -20,7 +20,9 @@
                         <field name="date_approve" />
                     </group>
                 </group>
-                <field name="checkbox" />
+                <group>
+                    <field name="checkbox" />
+                </group>
                 <field name="tracking_lines">
                     <tree editable="bottom" create="0">
                         <field name="checkbox" nolabel="1" />
