--- a/bista_purchase/views/purchase_views.xml
+++ b/bista_purchase/views/purchase_views.xml
@@ -215,7 +215,7 @@
                         </h1>
                     </div>
                     <group>
-                        <field name="manual_update" string="Manually Update ?"/>
+                        <field name="manual_update" string="Manually Update ?" groups="base.group_no_one"/>
                         <field name="active" invisible="1"/>
                     </group>
                 </sheet>
@@ -229,7 +229,7 @@
             <tree>
                 <field name="sequence" widget="handle"/>
                 <field name="name"/>
-                <field name="manual_update" invisible="1"/>
+                <field name="manual_update" invisible="1" groups="base.group_no_one"/>
             </tree>
         </field>
     </record>
