[Fix] Confliect Resolved.

--- a/bista_purchase/report/purchase_order.xml
+++ b/bista_purchase/report/purchase_order.xml
@@ -139,6 +139,12 @@
                 <td id="product"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
                     <span t-field="line.name"/>
+                    <div>
+                        <b>
+                            <span>Remarks:</span>
+                        </b>
+                        <span t-field="line.receipt_note"/>
+                    </div>
                 </td>
                 <td class="text-center" name="td_format"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; ">
