--- a/bista_purchase/report/purchase_quotation.xml
+++ b/bista_purchase/report/purchase_quotation.xml
@@ -130,6 +130,12 @@
                 <td id="product"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
                     <span t-field="order_line.name"/>
+                    <div>
+                        <b>
+                            <span>Remarks:</span>
+                        </b>
+                        <span t-field="order_line.receipt_note"/>
+                    </div>
                 </td>
                 <td class="text-center" name="td_format"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; ">
