[FIX] resolved error when print sale order report

--- a/bista_contact/views/res_partner_views.xml
+++ b/bista_contact/views/res_partner_views.xml
@@ -10,12 +10,12 @@
                     <group>
                            <group>
                             <field name="customer_status"/>
-                            <field name="dead_resone"/>
+                            <field name="dead_resone" attrs="{'invisible': [('customer_status', '!=', 'dead')]}" />
                             <field name="block" invisible="1"/>
                             </group>
                             <group>
                             <field name="do_not_call"/>
-                            <field name="dead_date"/>
+                            <field name="dead_date" attrs="{'invisible': [('customer_status', '!=', 'dead')]}" />
                            </group>
                     </group>
                 </page>
