--- a/bigcommerce_odoo_integration/views/sale_order.xml
+++ b/bigcommerce_odoo_integration/views/sale_order.xml
@@ -9,7 +9,7 @@
                 <header>
                     <button name="exportordertobigcommerce" type="object" string="Export Order"
                             attrs="{'invisible': ['|',('state', '!=','sale'),('big_commerce_order_id','!=',False)]}"/>
-                    <button name="get_shipped_qty" type="object" string="Shipped Qty"/>
+                    <button name="get_shipped_qty" type="object" string="Shipped Qty" invisible="1"/>
                 </header>
                 <xpath expr="//field[@name='payment_term_id']" position="after">
                     <field name="bigcommerce_store_id"/>
